# onboarding-agent

./: .dockerignore  .gitignore  Dockerfile  env.example  pyproject.toml
src/: app.py  config.py  main.py
src/core/: agent_orchestrator.py  utils.py
src/core/graph/: graph_builder.py  nodes.py  prompts.py  retrieval.py  state.py
src/ingest/: ingest.py  loaders.py  processing.py  storage.py
tf-infra/: main.tf  outputs.tf  variables.tf
