[project]
name = "onboarding-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "arthur.alentejo",email = "arthur.alentejo228@gmail.com"}
]
readme = "README.md"
requires-python = " <4.0.0,>=3.10.0"
dependencies = [
    "pymongo (>=4.16.0,<5.0.0)",
    "pypdf (>=6.5.0,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "tavily-python (>=0.7.17,<0.8.0)",
    "langchain-tavily (>=0.2.16,<0.3.0)",
    "langchain (>=1.2.3,<2.0.0)",
    "langchain-google-genai (>=4.1.3,<5.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "langchain-mongodb (>=0.10.0,<0.11.0)"
]

[tool.poetry]
package-mode = false